--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #------------------------------------------------------------
 
 # Which carpentry is this ("swc" or "dc")?
-carpentry: "swc"
+carpentry: "dc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "theCoolestWorkshopEver"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: david.matten@uct.ac.za
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
@@ -20,7 +20,7 @@ kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
 # See https://help.github.com/articles/repository-metadata-on-github-pages/.
-repository: <USERNAME>/<PROJECT>
+repository: davidmatten/theCoolestWorkshopEver
 
 # Sites.
 amy_site: "https://amy.software-carpentry.org/workshops"
@@ -41,7 +41,7 @@ pre_survey: "https://www.surveymonkey.com/r/swc_pre_workshop_v1?workshop_id="
 post_survey: "https://www.surveymonkey.com/r/swc_post_workshop_v1?workshop_id="
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am)
-start_time: 0
+start_time: 540
 
 # Specify that things in the episodes collection should be output.
 collections:
